@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-22T08:08:47Z",
+  "timestamp" : "2022-06-22T16:06:23Z",
   "count_outdated" : 389,
   "uniques_outdated" : 83,
-  "count" : 491,
-  "uniques" : 90,
+  "count" : 492,
+  "uniques" : 91,
   "views" : [
     {
       "timestamp": "2022-06-08T00:00:00Z",
@@ -42,6 +42,13 @@
     },
     {
       "timestamp": "2022-06-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
